tests/fn.err.out
error: fn.err.li 1,15: `i` is duplicated
    1 | fn f1(i: int, i: int) {}
      |               ^
error: fn.err.li 2,10: unknown type `foo`
    2 | fn f2(i: foo) {}
      |          ^^^
error: fn.err.li 5,3: cannot use yield in function that return non-sequence type
    5 |   yield '0'
      |   ^^^^^^^^^
error: fn.err.li 6,10: mismatched types: `string` (expected) and `int` (found)
    6 |   return i
      |          ^
error: fn.err.li 8,4: `g` is duplicated
    8 | fn g(i: int) {}
      |    ^
error: fn.err.li 12,11: mismatched types: `string` (expected) and `int` (found)
   12 |     yield v
      |           ^
error: fn.err.li 17,1: `v` is not function (`int`)
   17 | v()
      | ^^^
error: fn.err.li 19,1: cannot call `int`
   19 | 0()
      | ^^^
